fixed spacing for brainstorm icon

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -125,7 +125,7 @@
         <h4 class="Title"> Brainstorm </h4>
       </div>
           <!-- brainstorm session in the sidebar -->
-        <div class="col s12">
+        <div class="col s12 container">
 
           <!-- brainstorm session in the sidebar -->
           <form id='brainstorm_form2' method="post" onsubmit="submitBrainstormToImages2(this)">
