Finished bottom navbar, matches design

--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -73,4 +73,19 @@ input:focus {
     color: #e59a1d;
 }
 
+#navbar {
+    width: 300px;
+    border-top-style: solid;
+    border-top-color: #727272;
+    border-top-width: 1.5px;
+}
+.navtile {
+    height: 60px;
+
+}
+
+.img_size {
+    height: 55px;
+}
+
 </style>
