Remove Close button in start survey, since there is already an X for close on the window

--- a/views/survey_start.html
+++ b/views/survey_start.html
@@ -12,10 +12,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!--<body onload="setupTime()">-->
 <body onload="google.script.run.createSurveyTable()">
-<div class="main">
+<div class="">
     <div class="container">
         <div class="row c10">
-            <span class="float left-align">Answering these questions will help you create a more impactful presentation in less time</span>
+            <span class="float left-align">Answering these questions will help you create a more impactful presentation in less time.</span>
         </div>
     </div>
 
@@ -164,9 +164,9 @@
 
 </div>
 
-<div class="side">
-    <a class="waves-light waves-effect btn-small blue accent-2"
-       onclick="google.script.host.close()" >Close<i class="material-icons right">cancel</i></a>
+<div class="">
+    <!--<a class="waves-light waves-effect btn-small blue accent-2"-->
+       <!--onclick="google.script.host.close()" >Close<i class="material-icons right">cancel</i></a>-->
 </div>
 
 </body>
