Finished integrating trigger. Will only work once deployed per GAS limitation

--- a/views/survey_start.css.html
+++ b/views/survey_start.css.html
@@ -23,4 +23,8 @@
     /*[type="radio"]:checked + label::after, [type="radio"].with-gap:checked + label::before, [type="radio"].with-gap:checked + label::after {*/
     /*border: 2px solid rgb(255, 138, 6) !important;*/
     /*}*/
+    .script-application-sidebar-close {
+        color: purple; !important;
+        text-color: blue; !important;
+    }
 </style>
