Read data from survey, display in template dialog

--- a/views/create_template.html
+++ b/views/create_template.html
@@ -1,3 +1,6 @@
+<html>
+<head>
+
 <?!= include('views/create_template.css'); ?>
 <?!= include('jquery/create_template.js'); ?>
 <!-- Materialize icons -->
@@ -11,6 +14,7 @@
 <!-- Compiled and minified JQuery -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!--<body onload="setupTime()">-->
+</head>
 <body>
 <div class="">
     <div class="container">
@@ -30,4 +34,7 @@
     <!--onclick="google.script.host.close()" >Close<i class="material-icons right">cancel</i></a>-->
 </div>
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<?!= include('jquery/create_template.js'); ?>
 </body>
+</html>
