generate template button succesfully console logs

--- a/views/create_template.css.html
+++ b/views/create_template.css.html
@@ -4,14 +4,39 @@
     provide functionality that is not in Materialize. */
 
     .num_slides {
-        color: greenyellow;
+        font-family: Helvetica;
+        font-size: 24px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: green;
     }
+
     .temp_goal {
-        color: purple;
-        text-color: magenta;
+        font-family: Helvetica;
+        font-size: 24px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: goldenrod;
     }
 
     .temp_aud {
-        text-color: grey;
+        font-family: Helvetica;
+        font-size: 24px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: darkgoldenrod;
     }
+
 </style>
