Removed db code from before Nic's db merge

--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
-<div class="main">
+<div class="">
     <div class="center-align blue accent-2">
         <h5 class="white-text"> How to Use </h5>
     </div>
@@ -24,14 +24,14 @@
     <div class="center-align blue accent-2">
         <h5 class="white-text"> About the Company </h5>
     </div>
-        <span> For more information, check us out at <a href="https://captivate-ai.herokuapp.com">https://captivate-ai.herokuapp.com</a></span>
+        <span> For more information, check us out at <a href="https://captivate-ai.herokuapp.com">https://captivate-ai.us</a></span>
     <div class="blue center-align accent-2">
         <h5 class="white-text"> Report an Issue </h5>
     </div>
-        <span> To report a bug or an issue, send us an e-mail at support@captivate-ai.com</span>
+        <span> To report a bug or an issue, send us an e-mail at support@captivate-ai.us</span>
 </div>
 
-<div class="side">
-    <button class="waves-light waves-effect btn-small blue accent-2"
-            onclick="google.script.host.close()" >Close</button>
+<div class="">
+    <!--<button class="waves-light waves-effect btn-small blue accent-2"-->
+            <!--onclick="google.script.host.close()" >Close</button>-->
 </div>
