checklist stuff added

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -91,23 +91,18 @@
       <div class="container">
         <h4 class="Title"> Checklist </h4>
       </div>
-        <div class='suggestion'>
-          <div class='label'>SUGGESTION</div>
-          There is too much text on this slide. Consider selecting a picture you would like to replace it with
+        <div class='idea'>
+          <div class='label'> CLEAN SLIDE RATIO:</div>
+          <div id='clean_slides'></div>
         </div>
       <div class='idea'>
-          <div class='label'>FONTS</div>
-          <div id='fontbox'>
-            <button class='black waves-light font' id='TNR'>Times New Roman</button>
-            <button class='waves-light waves-effect font' id='athelas'>Athelas</button>
-            <button class='waves-light waves-effect font' id='georgia'>Georgia</button>
-          </div>
-        </div>
+          <div class='label'>FONTS USED</div>
+          <div id='fonts_used'></div>
+      </div>
       <div class='idea'>
-          <div class='label'>QUOTES</div>
-          <button class='quote'>"Don't cry because it's over, smile because it happened." -Dr. Seuss</button>
-          <button class='quote'>"Two things are infinite: the universe and human stupidity; and I'm not sure about the universe." -Albert Einstein</button>
-        </div>
+        <div class='label'>FONTSIZES USED</div>
+        <div id='fontsizes_used'></div>
+      </div>
     </div>
 
     <div class='page' id='fixes'>
