Added a bstorm table in the db, with presID as primary key

--- a/views/open_brainstorm.html
+++ b/views/open_brainstorm.html
@@ -15,7 +15,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!--<body onload="setupTime()">-->
 </head>
-<body>
+<body onload="google.script.run.createBrainstormTable()">
 <script>
     // Prevent forms from submitting.
     function preventFormSubmit() {
